feat: correct the refacto issue